--- a/frontend/src/app/components/filter/categories-filter/categories-filter.component.html
+++ b/frontend/src/app/components/filter/categories-filter/categories-filter.component.html
@@ -2,6 +2,7 @@
     <li class="widget__tagcloud--list" *ngFor="let item of items; let i = index">
         <a
           class="widget__tagcloud--link"
+          [class.active]="isSelected(item)"
           [attr.aria-label]="'Select brand ' + item"
           (click)="onBrandClick(item); $event.preventDefault()"
         >
