--- a/frontend/src/app/components/filter/dropdown-filter/dropdown-filter.component.html
+++ b/frontend/src/app/components/filter/dropdown-filter/dropdown-filter.component.html
@@ -6,7 +6,7 @@
     (ngModelChange)="onSortChange()"
   >
     <option disabled>- Select -</option>
-    <option *ngFor="let item of items" [value]="item.value">
+    <option *ngFor="let item of items" [value]="item.value || item.id">
       {{ item.label }}
     </option>
   </select>
