--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,7 +1,21 @@
-<!-- <app-hero-slider [slides]="slides"></app-hero-slider> -->
-<app-banner-section type="categories" [banners]="categoryBanners"></app-banner-section>
-<app-banner-section type="discount" [banners]="discountBanners" [discountContent]="discountContent"></app-banner-section>
-<!-- <app-brand-logos [logos]="brandLogos"></app-brand-logos> -->
-<app-shop-cards [content]="shopCardContent" [banners]="shopCardBanners" [videoUrl]="shopCardVideoUrl"></app-shop-cards>
-<app-testimonial [testimonials]="testimonials"></app-testimonial>
+<app-banner-section 
+  type="categories" 
+  [banners]="categoryBanners">
+</app-banner-section>
+
+<app-banner-section 
+  type="discount" 
+  [banners]="discountBanners" 
+  [discountContent]="discountContent">
+</app-banner-section>
+
+<app-shop-cards 
+  [content]="shopCardContent" 
+  [banners]="shopCardBanners">
+</app-shop-cards>
+
+<app-testimonial 
+  [testimonials]="testimonials">
+</app-testimonial>
+
 <app-contact-section></app-contact-section>
