--- a/frontend/src/app/components/quantity-box/quantity-box.component.scss
+++ b/frontend/src/app/components/quantity-box/quantity-box.component.scss
@@ -1,59 +1,100 @@
+// Modern Quantity Box Styling
 .quantity__box {
-	text-align: center;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex
+  display: flex;
+  align-items: center;
+  background: var(--white-color);
+  border: 2px solid rgba(6, 23, 56, 0.1);
+  border-radius: 12px;
+  overflow: hidden;
+  width: fit-content;
+  transition: all 0.3s ease;
+  
+  &:hover {
+    border-color: var(--secondary-color);
+    box-shadow: 0 4px 15px rgba(238, 39, 97, 0.1);
+  }
+  
+  &:focus-within {
+    border-color: var(--secondary-color);
+    box-shadow: 0 0 0 3px rgba(238, 39, 97, 0.1);
+  }
 }
 
-.quantity__value {
-	display: inline-block;
-	border: 1px solid var(--border-color2);
-	margin: 0;
-	width: 3.3rem;
-	height: 3rem;
-	text-align: center;
-	padding: 0;
-	background: var(--gray-color2);
-	cursor: pointer;
-	font-size: 2rem;
-	font-weight: 500
+.quantity__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  background: transparent;
+  border: none;
+  color: var(--primary-color);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-size: 1.8rem;
+  font-weight: 600;
+  
+  &:hover:not(:disabled) {
+    background: var(--secondary-color);
+    color: var(--white-color);
+  }
+  
+  &:disabled {
+    color: rgba(6, 23, 56, 0.3);
+    cursor: not-allowed;
+    background: rgba(6, 23, 56, 0.05);
+  }
+  
+  &.decrease {
+    border-right: 1px solid rgba(6, 23, 56, 0.1);
+  }
+  
+  &.increase {
+    border-left: 1px solid rgba(6, 23, 56, 0.1);
+  }
+  
+  i {
+    font-size: 1.6rem;
+    font-weight: bold;
+  }
 }
 
-.quantity__value.decrease {
-	margin-right: -4px;
-	border-radius: 13px 0 0 13px
+.quantity__input {
+  width: 60px;
+  height: 44px;
+  border: none;
+  background: transparent;
+  text-align: center;
+  font-size: 1.6rem;
+  font-weight: 600;
+  color: var(--primary-color);
+  outline: none;
+  
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  
+  &[type=number] {
+    -moz-appearance: textfield;
+  }
 }
 
-.quantity__value.increase {
-	margin-left: -4px;
-	border-radius: 0 13px 13px 0
-}
-
-.quickview__value--quantity {
-	width: 3.5rem;
-	height: 3.5rem;
-	font-size: 2.2rem;
-	line-height: 3.3rem
-}
-
-
-input.quantity__number {
-	text-align: center;
-	border: none;
-	border-top: 1px solid var(--border-color2);
-	border-bottom: 1px solid var(--border-color2);
-	margin: 0;
-	width: 3.3rem;
-	height: 3rem
-}
-
-input.quickview__value--number {
-	height: 3.5rem;
-	font-size: 1.7rem
-}
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-	-webkit-appearance: none;
-	margin: 0
+// Responsive Design
+@media (max-width: 576px) {
+  .quantity__btn {
+    width: 40px;
+    height: 40px;
+    
+    i {
+      font-size: 1.4rem;
+    }
+  }
+  
+  .quantity__input {
+    width: 50px;
+    height: 40px;
+    font-size: 1.4rem;
+  }
 }
